fixing color gap

--- a/css/main.scss
+++ b/css/main.scss
@@ -82,8 +82,7 @@ nav {
     background:#999;
 }
 
-.wrapper {
-    background-color: #fdfdfd;
-    background-repeat: repeat;
+body {
+    height: 100%;
 }
 
